# http-client

./: .gitignore  README.md  pyproject.toml
client/: __init__.py  http.py  serder.py  service.py
tests/: test_http_client.py
