[tool.poetry]
name = "http-client"
version = "0.0.1"
description = ""

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"
prometheus-client = "^0.14.1"
orjson = "^3.8.2"
mypy-extensions = "^0.4.3"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
